[workspace]
members = [
    "crates/bevy_gltf_components",
    "crates/bevy_gltf_blueprints",
    "crates/bevy_gltf_save_load",
    "crates/bevy_registry_export",
    "examples/bevy_gltf_components/basic/",
    "examples/bevy_gltf_blueprints/basic/",
    "examples/bevy_gltf_blueprints/basic_scene_components/",
    "examples/bevy_gltf_blueprints/basic_xpbd_physics/",
    "examples/bevy_gltf_blueprints/nested_blueprints/",
    "examples/bevy_gltf_blueprints/animation/",
    "examples/bevy_gltf_blueprints/multiple_levels/",
    "examples/bevy_gltf_blueprints/multiple_levels_multiple_blendfiles",
    "examples/bevy_gltf_blueprints/materials/",
    "examples/bevy_gltf_save_load/basic/",
    "examples/bevy_registry_export/basic"
]
resolver = "2"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints]
workspace = true

#### --------------------Dev/ debug-------------------------------
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
features = ["dynamic"]

#### --------------------Production/ release-------------------------------
[profile.release]
strip = "debuginfo"
lto = "thin"
