[workspace]
members = [
    "crates/*",
    "examples/common*",
    "examples/bevy_gltf_components/*",
    "examples/bevy_gltf_blueprints/*",
    "examples/bevy_gltf_save_load/*",
    "examples/bevy_registry_export/*",
    "testing/bevy_example/",
]
resolver = "2"

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

#### --------------------Dev/ debug-------------------------------
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

#### --------------------Production/ release-------------------------------
[profile.release]
strip = "debuginfo"
lto = "thin"
