[package]
name = "bevy_gltf_blueprints"
version = "0.1.0"
description = "Adds the ability to define Blueprints/Prefabs for [Bevy](https://bevyengine.org/) inside gltf files and spawn them in Bevy."
homepage = "https://github.com/kaosat-dev/Blender_bevy_components_worklflow"
repository = "https://github.com/kaosat-dev/Blender_bevy_components_worklflow"
keywords = ["gamedev", "bevy", "gltf", "blueprint", "prefab"]
categories = ["game-development"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dev-dependencies]
bevy="0.11.2"

[dependencies]
bevy_gltf_components = { path = "../bevy_gltf_components" }
bevy = { version = "0.11.2", default-features = false, features = ["bevy_asset", "bevy_scene", "bevy_gltf"] }