[package]
name = "bevy_gltf_save_load_basic_example"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy="0.12"
bevy_gltf_blueprints = "0.6"
bevy_gltf_save_load = { path = "../../../crates/bevy_gltf_save_load" }

bevy_rapier3d = { version = "0.23.0", features = [ "serde-serialize", "debug-render-3d", "enhanced-determinism"] }
bevy_asset_loader = { version = "0.18", features = ["standard_dynamic_assets" ]} 
bevy_editor_pls = { version = "0.6" }
rand = "0.8.5"
serde_json="1.0.108"
serde="1.0.193"